syntax = "proto3";

option go_package = "github.com/jianghaibo12138/mall4micro/mall4micro-auth/grpc_dto/mall4micro-auth/protos";

import "mall4micro-common/protos/reply.proto";

package dto;

service RpcAuthenticateSrv {
  rpc CallRpcAuthenticateSrv (RpcAuthenticateRequest) returns (RpcAuthenticateReply) {}
}

message RpcAuthenticateRequest {
  string token = 1;
}

message RpcAuthenticateReply {
  RpcReply reply = 1;
  uint32 id = 2;
  string username = 3;
  string email = 4;
  string mobile = 5;
  int64 status = 6;
}
